--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "react-native-web": "~0.11.7",
     "react-navigation-drawer": "^2.4.12",
     "react-navigation-stack": "^2.3.13",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
