--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-navigation-drawer": "^2.4.12",
     "react-navigation-stack": "^2.3.13",
     "react-redux": "^7.2.0",
+    "react-tools": "^0.13.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
