--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-navigation-drawer": "^2.4.12",
-    "react-navigation-stack": "^2.3.13",
+    "react-navigation-drawer": "^2.4.13",
+    "react-navigation-stack": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-tools": "^0.13.3",
     "redux": "^4.0.5",
