--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.2.18",
     "add": "^2.0.6",
     "expo": "~37.0.3",
+    "expo-mail-composer": "^8.1.0",
     "expo-permissions": "^8.1.0",
     "expo-secure-store": "^8.1.0",
     "expo-updates": "~0.1.0",
