--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^5.2.18",
     "add": "^2.0.6",
     "expo": "~37.0.3",
+    "expo-asset": "^8.1.4",
+    "expo-image-manipulator": "^8.1.0",
     "expo-image-picker": "^8.1.0",
     "expo-mail-composer": "^8.1.0",
     "expo-permissions": "^8.1.0",
