--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.8.0",
     "@react-navigation/bottom-tabs": "^5.3.4",
     "@react-navigation/drawer": "^5.6.3",
     "@react-navigation/native": "^5.2.3",
@@ -37,6 +38,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
