--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "add": "^2.0.6",
     "expo": "~37.0.3",
     "expo-asset": "^8.1.4",
+    "expo-calendar": "^8.1.0",
     "expo-image-manipulator": "^8.1.0",
     "expo-image-picker": "^8.1.0",
     "expo-mail-composer": "^8.1.0",
@@ -27,6 +28,7 @@
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-moment": "^0.9.7",
     "react-native": "~0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
