--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-permissions": "^8.1.0",
     "expo-secure-store": "^8.1.0",
     "expo-updates": "~0.1.0",
+    "moment": "^2.25.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-moment": "^0.9.7",
@@ -35,6 +36,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
+    "react-native-modal-datetime-picker": "^8.6.0",
     "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
