--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-unimodules": "~0.9.0",
+    "react-native-usbserial": "^1.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation-drawer": "^2.4.13",
